@@ -12,16 +12,19 @@ import no.nav.testnav.libs.data.pdlforvalter.v1.StatsborgerskapDTO;
 import no.nav.testnav.libs.data.pdlforvalter.v1.UtenlandskAdresseDTO;
 import no.nav.testnav.libs.data.pdlforvalter.v1.UtflyttingDTO;
 import no.nav.testnav.libs.data.pdlforvalter.v1.VegadresseDTO;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Stream;
 
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
-import static no.nav.pdl.forvalter.utils.IdenttypeFraIdentUtility.getIdenttype;
+import static no.nav.pdl.forvalter.utils.IdenttypeUtility.getIdenttype;
+import static no.nav.pdl.forvalter.utils.TestnorgeIdentUtility.isTestnorgeIdent;
 import static no.nav.testnav.libs.data.pdlforvalter.v1.AdressebeskyttelseDTO.AdresseBeskyttelse.STRENGT_FORTROLIG;
 import static no.nav.testnav.libs.data.pdlforvalter.v1.Identtype.FNR;
 import static org.apache.commons.lang3.BooleanUtils.isNotTrue;
@@ -100,7 +103,7 @@ public class BostedAdresseService extends AdresseService<BostedadresseDTO, Perso
                                     .anyMatch(utflytting -> innflytting.getInnflyttingsdato()
                                             .isAfter(utflytting.getUtflyttingsdato())))) {
 
-                if (person.getUtflytting().get(0).isVelkjentLand()) {
+                if (person.getUtflytting().getFirst().isVelkjentLand()) {
                     if (isNull(bostedadresse.getUtenlandskAdresse())) {
                         bostedadresse.setUtenlandskAdresse(new UtenlandskAdresseDTO());
                     }
@@ -113,7 +116,13 @@ public class BostedAdresseService extends AdresseService<BostedadresseDTO, Perso
                 }
 
             } else if (bostedadresse.countAdresser() == 0) {
-                bostedadresse.setVegadresse(new VegadresseDTO());
+
+                if (isTestnorgeIdent(person.getIdent())) {
+                    bostedadresse.setUtenlandskAdresse(new UtenlandskAdresseDTO());
+
+                } else {
+                    bostedadresse.setVegadresse(new VegadresseDTO());
+                }
             }
 
         } else if (bostedadresse.countAdresser() == 0) {
@@ -137,14 +146,14 @@ public class BostedAdresseService extends AdresseService<BostedadresseDTO, Perso
 
             var vegadresse =
                     adresseServiceConsumer.getVegadresse(bostedadresse.getVegadresse(), bostedadresse.getAdresseIdentifikatorFraMatrikkelen());
-            bostedadresse.setAdresseIdentifikatorFraMatrikkelen(vegadresse.getMatrikkelId());
+            bostedadresse.setAdresseIdentifikatorFraMatrikkelen(isIdSupported(bostedadresse, person.getIdent()) ? vegadresse.getMatrikkelId() : null);
             mapperFacade.map(vegadresse, bostedadresse.getVegadresse());
 
         } else if (nonNull(bostedadresse.getMatrikkeladresse())) {
 
             var matrikkeladresse =
                     adresseServiceConsumer.getMatrikkeladresse(bostedadresse.getMatrikkeladresse(), bostedadresse.getAdresseIdentifikatorFraMatrikkelen());
-            bostedadresse.setAdresseIdentifikatorFraMatrikkelen(matrikkeladresse.getMatrikkelId());
+            bostedadresse.setAdresseIdentifikatorFraMatrikkelen(isIdSupported(bostedadresse, person.getIdent()) ? matrikkeladresse.getMatrikkelId() : null);
             mapperFacade.map(matrikkeladresse, bostedadresse.getMatrikkeladresse());
 
         } else if (nonNull(bostedadresse.getUtenlandskAdresse())) {
@@ -166,17 +175,18 @@ public class BostedAdresseService extends AdresseService<BostedadresseDTO, Perso
     private String getLandkode(PersonDTO person) {
 
         return Stream.of(person.getBostedsadresse().stream()
-                                .filter((adresse -> nonNull(adresse.getUtenlandskAdresse())))
-                                .filter(adresse -> isNotBlank(adresse.getUtenlandskAdresse().getLandkode()))
                                 .map(BostedadresseDTO::getUtenlandskAdresse)
+                                .filter(Objects::nonNull)
                                 .map(UtenlandskAdresseDTO::getLandkode)
+                                .filter(StringUtils::isNotBlank)
                                 .findFirst(),
                         person.getUtflytting().stream()
                                 .map(UtflyttingDTO::getTilflyttingsland)
                                 .findFirst(),
                         person.getStatsborgerskap().stream()
-                                .filter(statsborger -> "NOR".equals(statsborger.getLandkode()))
                                 .map(StatsborgerskapDTO::getLandkode)
+                                .filter(landkode -> !"NOR".equals(landkode))
+                                .filter(StringUtils::isNotBlank)
                                 .findFirst())
                 .filter(Optional::isPresent)
                 .map(Optional::get)
